devops/my pratice/notepad++ pratice/ingress.yml
          
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: hotel
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "cheguvaro.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: knote
            port:
              number: 80
  - host: "hotel.cheguvaro.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: knote
            port:
              number: 80
              
              
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - foo.bar.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  rules:
    - host: "hotel.cheguvaro.online"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            service:
              name: knote
              port:
                number: 80
                
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-ingress
  namespace: hotel
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "hotel.cheguvaro.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: knote
          servicePort: 80
