devops/my pratice/notepad++ pratice/sample.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knote
  namespace: hotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knote
      tier: frontend
  template:
    metadata:
      labels:
        app: knote
        tier: frontend
    spec:
      containers:
        - name: app
          image: learnitguide/knotejs:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: knote
  namespace: hotel
spec:
  selector:
    app: knote
    tier: frontend

  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
  
  
---
apiVersion: v1
kind: Namespace
metadata:
  name: hotel
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: hotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
      tier: backend

  template:
    metadata:
      labels:
        app: mongo
        tier: backend

    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: hotel
spec:
  selector:
    app: mongo
    tier: backend

  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
                 
                 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: hotel
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "cheguvaro.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: knote
            port:
              number: 3000
  - host: "hotel.cheguvaro.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: knote
            port:
              number: 3000


https://antonputra.com/kubernetes/nginx-ingress-controller/
